syntax = "proto3";

package popular;

option go_package = "gen/popular-service/pb;pb";

import "google/api/annotations.proto";
import "models.proto";

service PopularService {
  rpc GetPopularThreads(GetPopularThreadsRequest) returns (GetPopularThreadsResponse) {
    option (google.api.http) = {
      get: "/popular/threads"
    };
  }
  rpc GetPopularComments(GetPopularCommentsRequest) returns (GetPopularCommentsResponse) {
    option (google.api.http) = {
      get: "/popular/comments"
    };
  }
}

message GetPopularThreadsRequest {
  optional int32 offset = 1;
  optional int32 limit = 2;
}

message GetPopularThreadsResponse {
  repeated models.Thread threads = 1;
}

message GetPopularCommentsRequest {
  optional int32 offset = 1;
  optional int32 limit = 2;
}

message GetPopularCommentsResponse {
  repeated models.Comment comments = 1;
}
